--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -113,11 +113,12 @@
                     android:layout_below="@+id/rating_container"
                     android:background="@color/divider_grey" />
 
-                <RelativeLayout
-                    android:id="@+id/etp_info_container"
+                <LinearLayout
+                    android:id="@+id/etp_and_free_cancellation_messaging_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/divider"
+                    android:weightSum="2"
                     android:orientation="horizontal"
                     android:padding="12dp"
                     android:visibility="gone">
@@ -126,31 +127,42 @@
                         android:id="@+id/etp_info_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
                         android:drawableLeft="@drawable/check"
+                        android:drawableRight="@drawable/details_info"
                         android:drawablePadding="8dp"
                         android:text="@string/pay_later_info_text" />
 
-                    <ImageView
+                    <View
+                        android:id="@+id/horizontal_divider_bw_etp_and_free_cancellation"
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:background="@color/divider_grey" />
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/free_cancellation"
+                        android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/details_info" />
+                        android:drawableLeft="@drawable/check"
+                        android:drawablePadding="8dp"
+                        android:text="@string/free_cancellation" />
 
-                </RelativeLayout>
+                </LinearLayout>
 
                 <View
-                    android:id="@+id/etp_info_divider"
+                    android:id="@+id/etp_and_free_cancellation_messaging_info_divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_below="@+id/etp_info_container"
+                    android:layout_below="@+id/etp_and_free_cancellation_messaging_container"
                     android:background="@color/divider_grey" />
 
                 <RelativeLayout
                     android:id="@+id/hotel_description_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/etp_info_divider"
+                    android:layout_below="@id/etp_and_free_cancellation_messaging_info_divider"
                     android:background="#EAEAEA"
                     android:paddingTop="10dp">
 
