--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -99,6 +99,7 @@
     <color name="hotel_cell_secondary_text_color">#9A9A9A</color>
     <color name="hotel_cell_disabled_text">#7D7D7D</color>
     <color name="hotel_detail_divider">#CACACA</color>
+    <color name="hotel_filter_background_color">#efefef</color>
 
     <color name="hotel_urgency_message_color">#E2934A</color>
     <color name="hotel_tonight_only_color">#4A90E2</color>
