--- a/project/src/main/res/layout/hotel_reviews_page_widget.xml
+++ b/project/src/main/res/layout/hotel_reviews_page_widget.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="?attr/actionBarSize"
+    android:paddingTop="?attr/actionBarSize"
     android:background="@color/hotel_reviews_summary_background_color"
-    android:orientation="vertical">
+    android:scrollbars="none">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/summary_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/summary_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/hotel_reviews_padding_left"
-                android:paddingRight="@dimen/hotel_reviews_padding_right"
-                android:paddingBottom="@dimen/hotel_reviews_summary_padding_bottom"
-                android:paddingTop="@dimen/hotel_review_row_padding_top" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/hotel_reviews_padding_left"
+            android:paddingRight="@dimen/hotel_reviews_padding_right"
+            android:paddingBottom="@dimen/hotel_reviews_summary_padding_bottom"
+            android:paddingTop="@dimen/hotel_review_row_padding_top" />
 
             <View
                 android:id="@+id/divider"
@@ -37,9 +32,5 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/hotel_review_background_color" />
-
-        </LinearLayout>
-    </ScrollView>
-
-
-</LinearLayout>
+    </LinearLayout>
+</com.expedia.bookings.widget.ScrollView>
