--- a/project/src/lastMinute/res/values/donottranslate.xml
+++ b/project/src/lastMinute/res/values/donottranslate.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="brand_name">lastminute.com.au</string>
-
-    <string name="app_name">lastminute.com.au</string>
+    <string name="app_name">LM AU &amp; NZ</string>
 
     <!-- Email addresses -->
     <string name="email_app_support">lastminute-android@mobiata.com</string>
@@ -11,7 +9,7 @@
 
     <!-- Google Wallet -->
     <!-- The merchant name to display to the user for Google Wallet -->
-    <string name="merchant_name">lastminute.com.au</string>
+    <string name="merchant_name">LM AU &amp; NZ</string>
 
     <!-- Tune SDK Key -->
     <string name="tune_sdk_app_advertiser_id">188640</string>
