--- a/project/src/lastMinute/res/values/themes.xml
+++ b/project/src/lastMinute/res/values/themes.xml
@@ -69,7 +69,7 @@
         <item name="skin_cvvDivErrorDrawable">@drawable/div_cvv_error_lm</item>
         <item name="skin_userRatingBarDrawable">@drawable/ratingbar_userreview_flat_blue_lm</item>
         <item name="skin_clearEditTextImage">@drawable/ic_clear_edittext</item>
-        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/ic_log_in_lm</item>
+        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/ic_lm_logo</item>
         <item name="skin_candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal_lm</item>
         <item name="skin_menuAboutWebViewActivity">@menu/menu_webview</item>
         <item name="skin_hotelRulesActionBarLogo">@drawable/ic_action_bar_lm_logo_small</item>
