--- a/project/src/main/res/layout/loading_overlay.xml
+++ b/project/src/main/res/layout/loading_overlay.xml
@@ -10,8 +10,7 @@
         <FrameLayout
             android:id="@+id/overlay_title_container"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/skin_lxPrimaryColor">
+            android:layout_height="?attr/actionBarSize">
 
             <TextView
                 android:id="@+id/overlay_loading_text"
