--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -52,12 +52,12 @@
                     android:stepSize=".5"
                     android:layout_marginBottom="2dp"/>
 
-                <TextView
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/hotel_amenity_or_distance_from_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="amenity goes here"
                     android:textColor="@color/hotel_cell_light_gray_text"
-                    android:textSize="11sp" />
+                    android:textSize="12sp" />
 
             </LinearLayout>
         </LinearLayout>
