Applying scale transition to end 2 end flow

--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -34,6 +34,7 @@
     <com.expedia.bookings.presenter.hotel.HotelCheckoutPresenter
         android:id="@+id/hotel_checkout_presenter"
         android:layout_width="match_parent"
+        android:background="#EAEAEA"
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
