--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -23,6 +23,43 @@
             android:scaleType="centerCrop" />
 
         <LinearLayout
+            android:id="@+id/urgency_message_layout"
+            style="@style/UrgencyMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/urgency_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="3dp" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/urgency_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="#ffffff"
+                android:textSize="10sp"/>
+        </LinearLayout>
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/vip_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:paddingLeft="12dp"
+            android:paddingTop="12dp"
+            android:text="@string/vip"
+            app:textStyle="medium"
+            android:textColor="#ffffff"
+            android:textSize="9sp" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|left"
@@ -83,6 +120,45 @@
                 android:textColor="#ffffff"
                 android:textSize="10sp"
                 app:textStyle="medium" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/air_attach_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="11dp"
+            android:background="@drawable/air_attach_background"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/air_attach_icon_background"
+                android:padding="4dp"
+                android:src="@drawable/airattach"
+                android:tint="#fd8126" />
+
+            <com.larvalabs.svgandroid.widget.SVGView
+                android:id="@+id/air_attach_curve"
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:paddingTop="2dp"
+                app:src="@raw/air_attach_curve" />
+
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/air_attach_discount"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp"
+                app:textStyle="medium" />
 
         </LinearLayout>
     </FrameLayout>
@@ -127,16 +203,17 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/price_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/strike_through_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha=".7"
-                    android:gravity="center"
                     android:paddingRight="4dp"
                     android:textColor="@color/hotel_cell_gray_text"
                     android:textSize="12sp" />
@@ -155,7 +232,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/hotel_cell_gray_text"
-                android:textSize="10sp" />
+                android:textSize="10sp"
+                android:visibility="gone" />
         </LinearLayout>
 
     </LinearLayout>
