--- a/project/src/main/res/values/styles_hotels.xml
+++ b/project/src/main/res/values/styles_hotels.xml
@@ -103,4 +103,12 @@
         <item name="textStyle">normal</item>
     </style>
 
+    <style name="UrgencyMessage">
+        <item name="android:paddingRight">9dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingLeft">9dp</item>
+        <item name="android:paddingTop">3dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+    </style>
+
 </resources>
