--- a/project/src/samsung/res/values/themes.xml
+++ b/project/src/samsung/res/values/themes.xml
@@ -26,7 +26,6 @@
         <item name="skin_hotelBookButtonColor">@android:color/white</item>
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book_samsung</item>
         <item name="skin_aboutAppLogoDrawable">@drawable/ic_launcher</item>
-        <item name="skin_actionBarAboutLogo">@drawable/icon_home_samsung</item>
         <item name="skin_actionBarBackgroundDrawable">@drawable/bg_action_bar_samsung</item>
         <item name="skin_hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_samsung_white_logo_small</item>
         <item name="skin_bgFindItineraryButton">@drawable/btn_find_samsung</item>
@@ -185,7 +184,7 @@
         <item name="android:homeAsUpIndicator" tools:targetApi="11">@drawable/ic_action_bar_back_arrow_samsung</item>
     </style>
     <style name="Theme.Phone.Preferences">
-        <item name="android:logo" tools:targetApi="11">@drawable/icon_home_samsung</item>
+        <item name="android:logo" tools:targetApi="11">?attr/skin_webViewPreferencesActionBarLogo</item>
     </style>
 
     <style name="Theme.Tablet.Preferences" parent="@style/Theme.Light.Dialog">
