--- a/project/src/main/res/layout/widget_hotel_results.xml
+++ b/project/src/main/res/layout/widget_hotel_results.xml
@@ -31,7 +31,7 @@
         android:layout_height="match_parent"
         android:background="#eaeaea" />
 
-    <android.support.v7.widget.RecyclerView
+    <com.expedia.bookings.widget.HotelListRecyclerView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
