--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -295,6 +295,14 @@
             android:summary="Select a test group"
             android:title="Split GT and LX Launch" />
 
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="@string/preference_abacus_default"
+            android:key="8706"
+            android:summary="Select a test group"
+            android:title="Integration AA Test" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Push" >
