--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -33,10 +33,56 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/gallery_container">
 
+                <LinearLayout
+                    android:id="@+id/promo_messaging_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#00877B"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="18dp"
+                    android:paddingLeft="18dp">
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/discount_percentage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/guest_rating_background"
+                        android:gravity="center"
+                        android:layout_marginRight="10dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:paddingTop="3dp"
+                        android:textColor="#FFFFFF"
+                        android:textSize="10sp"
+                        app:textStyle="medium" />
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/promo_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:textColor="#FFFFFF"
+                        android:textSize="11sp"
+                        app:textStyle="normal" />
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/vip_access_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|right"
+                        android:textColor="#FFFFFF"
+                        android:textSize="11sp"
+                        android:text="@string/vip"
+                        app:textStyle="medium" />
+
+                </LinearLayout>
                 <RelativeLayout
                     android:id="@+id/price_widget"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/promo_messaging_container"
                     android:background="@color/hotels_primary_color"
                     android:paddingBottom="15dp"
                     android:paddingLeft="18dp"
@@ -49,9 +95,21 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:gravity="center_vertical"
+                        android:paddingRight="10dp"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         app:textStyle="medium" />
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/strike_through_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/price_per_night"
+                        android:layout_alignBaseline="@id/price_per_night"
+                        android:alpha=".7"
+                        android:gravity="center_vertical"
+                        android:textColor="#FFFFFF"
+                        android:textSize="11sp" />
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/hotel_search_info"
