--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -108,23 +108,43 @@
                 android:textSize="11sp"
                 android:visibility="gone" />
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/daily_price_per_night"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:id="@+id/price_container"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp"
-                android:textColor="@color/hotel_cell_disabled_text"
-                app:textStyle="medium"
-                android:textSize="17sp" />
+                android:orientation="horizontal">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/daily_price_per_night"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/per_night"
+                    android:textColor="@color/hotel_cell_disabled_text"
+                    android:textSize="17sp"
+                    app:textStyle="medium" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/per_night"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/daily_price_per_night"
+                    android:text="@string/per_night"
+                    android:textColor="@color/hotel_cell_disabled_text"
+                    android:textSize="14sp"
+                    app:textStyle="normal" />
+
+
+            </LinearLayout>
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/total_price_per_night"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_below="@+id/daily_price_per_night"
+                android:layout_below="@+id/price_container"
                 android:layout_marginRight="15dp"
                 android:textColor="@color/hotelsv2_checkout_text_color"
                 app:textStyle="normal"
@@ -149,7 +169,7 @@
         </RelativeLayout>
 
         <View
-            android:id="@+id/divider"
+            android:id="@+id/room_info_divider"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_below="@+id/view_room_button"
@@ -191,7 +211,7 @@
     </LinearLayout>
 
         <View
-            android:id="@+id/divider1"
+            android:id="@+id/row_divider"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_marginTop="8dp"
