--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -20,7 +20,7 @@
                     android:id="@+id/images_gallery"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/car_details_image_size"
-                    android:background="@drawable/placeholder_lg"
+                    android:background="#262626"
                     android:fadingEdge="none"
                     android:spacing="20dp"
                     android:unselectedAlpha="1.0"
@@ -84,50 +84,61 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/promo_messaging_container"
                     android:background="@color/hotels_primary_color"
-                    android:paddingBottom="15dp"
+                    android:paddingBottom="16dp"
                     android:paddingLeft="18dp"
                     android:paddingRight="18dp"
-                    android:paddingTop="15dp">
+                    android:paddingTop="13dp">
 
                     <com.expedia.bookings.widget.TextView
-                        android:id="@+id/price_per_night"
+                        android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:gravity="center_vertical"
-                        android:paddingRight="10dp"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         app:textStyle="medium" />
 
                     <com.expedia.bookings.widget.TextView
+                        android:id="@+id/per_night"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/price"
+                        android:layout_toRightOf="@+id/price"
+                        android:paddingRight="10dp"
+                        android:text="@string/per_night"
+                        android:textColor="#FFFFFF"
+                        android:textSize="12sp"
+                        app:textStyle="normal" />
+
+                    <com.expedia.bookings.widget.TextView
                         android:id="@+id/strike_through_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@id/price_per_night"
-                        android:layout_alignBaseline="@id/price_per_night"
+                        android:layout_alignBaseline="@id/per_night"
+                        android:layout_toRightOf="@id/per_night"
                         android:alpha=".7"
                         android:gravity="center_vertical"
                         android:textColor="#FFFFFF"
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        android:visibility="gone" />
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/hotel_search_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/price_per_night"
+                        android:layout_below="@+id/price"
                         android:textColor="#FFFFFF"
                         android:textSize="11sp"
                         app:textStyle="normal" />
 
                     <Button
                         android:id="@+id/select_room_button"
-                        style="@style/android:Widget.Material.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/spinner_ripple"
+                        android:background="@drawable/hotel_select_room_button_selector"
                         android:minHeight="0dp"
                         android:paddingBottom="5dp"
                         android:paddingLeft="10dp"
@@ -136,8 +147,7 @@
                         android:text="@string/select_a_room_instruction"
                         android:textAllCaps="false"
                         android:textColor="@color/hotels_primary_color"
-                        android:textSize="17sp"
-                        android:textStyle="normal" />
+                        android:textSize="17sp" />
 
                 </RelativeLayout>
 
@@ -325,7 +335,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:layout_below="@+id/hotel_description_container"
-                    android:layout_marginBottom="10dp"
                     android:background="@color/hotel_detail_divider" />
 
                 <com.expedia.bookings.widget.FrameLayout
@@ -484,7 +493,6 @@
                     android:background="@drawable/spinner_ripple"
                     android:orientation="vertical"
                     android:paddingBottom="20dp"
-                    android:layout_marginBottom="40dp"
                     android:paddingTop="19dp">
 
                     <com.expedia.bookings.widget.TextView
@@ -517,17 +525,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:background="@color/hotels_primary_color"
+        android:background="@drawable/hotel_select_room_ripple"
         android:gravity="center"
-        android:paddingBottom="12dp"
-        android:paddingLeft="18dp"
-        android:paddingRight="18dp"
-        android:paddingTop="12dp"
+        android:paddingBottom="20dp"
+        android:paddingTop="19dp"
         android:text="@string/select_a_room_instruction"
         android:textAllCaps="false"
         android:textSize="16sp"
         android:textColor="@android:color/white"
         android:visibility="gone" />
+
+    <View
+        android:id="@+id/hotel_details_gradient"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/hotel_detail_gradient_height"
+        android:background="@drawable/cars_details_gradient_top" />
 
     <View
         android:id="@+id/toolbar_background"
