--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -81,7 +81,7 @@
     <color name="section_flight_edit_traveler_link_color">#2A4367</color>
 
     <!-- Hotels colors -->
-    <color name="hotels_primary_color">#028F87</color>
+    <color name="hotels_primary_color">#009688</color>
     <color name="hotels_cc_text_color_secondary">#868a8f</color>
     <color name="hotel_price_breakdown_discount_green">#218b22</color>
     <color name="actionbar_text_disabled">#505c69</color>
