--- a/project/src/main/res/layout/hotel_loading_cell.xml
+++ b/project/src/main/res/layout/hotel_loading_cell.xml
@@ -1,37 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/card_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/card_layer_list"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:orientation="vertical"
-    android:paddingBottom="12dp"
-    android:paddingLeft="9dp"
-    android:paddingRight="9dp">
-
 <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:id="@id/root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#eaeaea">
 
-        <ImageView
-            android:id="@+id/background_image_view"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/car_search_list_image_container_margin"
+        android:layout_marginRight="@dimen/car_search_list_image_container_margin"
+        android:layout_marginBottom="12dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="1dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="134dp"
-            android:scaleType="centerCrop" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/text_layout"
-        android:layout_width="match_parent"
-        android:layout_height="47dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingBottom="2dp"
-        android:paddingLeft="14dp"
-        android:paddingRight="14dp">
+                <ImageView
+                    android:id="@+id/background_image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="134dp"
+                    android:scaleType="centerCrop" />
 
-    </LinearLayout>
+                <View
+                    android:id="@+id/gradient"
+                    android:layout_width="match_parent"
+                    android:layout_height="67dp"
+                    android:layout_gravity="bottom"
+                    android:background="@drawable/hotel_result_list_gradient_bottom"
+                    android:scaleType="centerCrop" />
 
-</LinearLayout>
+            </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/text_layout"
+                android:layout_width="match_parent"
+                android:layout_height="47dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingBottom="2dp"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp">
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
