5056 - Disable hotel adult/child guest picker buttons.

--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -338,6 +338,8 @@
     <!-- Hotels V2 Checkout Colors -->
     <color name="hotelsv2_checkout_text_color">#676767</color>
     <color name="hotelsv2_checkout_divider_color">#DFDFDF</color>
+    <color name="hotel_guest_selector_enabled_color">#5C5C5C</color>
+    <color name="hotel_guest_selector_disabled_color">#405C5C5C</color>
 
     <!-- Hotels V2 Detail star color -->
     <color name="hotelsv2_detail_star_color">#F1B906</color>
