--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -319,6 +319,7 @@
     <dimen name="hotel_preview_margin_small">4dp</dimen>
     <dimen name="hotel_marker_padding_width">20dp</dimen>
     <dimen name="hotel_marker_padding_height">14dp</dimen>
+    <dimen name="hotel_gallery_description_padding">5dp</dimen>
 
     <!--Dimensions for hotel review row-->
     <!--Text size of review title-->
