--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -327,18 +327,32 @@
     <dimen name="hotel_review_body">12dp</dimen>
     <!--Text size of reviewer-->
     <dimen name="hotel_reviewer">12dp</dimen>
-    <!--Margin for one row-->
-    <dimen name="hotel_review_row_margin">10dp</dimen>
-    <!--Top margin for a review detail item-->
-    <dimen name="hotel_review_detail_margin_top">2dp</dimen>
-    <!--Bottom margin for a review detail item-->
-    <dimen name="hotel_review_detail_margin_bottom">3dp</dimen>
+    <!--Top padding for one review row-->
+    <dimen name="hotel_review_row_padding_top">18dp</dimen>
+    <!--Bottom padding for one review row-->
+    <dimen name="hotel_review_row_padding_bottom">@dimen/hotel_review_row_padding_top</dimen>
+    <!--Left padding for hotel reviews-->
+    <dimen name="hotel_reviews_padding_left">20dp</dimen>
+    <!--Right padding for hotel reviews-->
+    <dimen name="hotel_reviews_padding_right">@dimen/hotel_reviews_padding_left</dimen>
     <!--Review row divider height-->
     <dimen name="hotel_review_divider_height">1dp</dimen>
+    <!--Review content line spacing-->
+    <dimen name="hotel_review_content_line_spacing">3dp</dimen>
+    <!--Review padding bottom-->
+    <dimen name="hotel_review_padding_bottom">5dp</dimen>
+
+    <!--Dimensions for hotel reviews summary-->
     <!--Review summary rating text size-->
-    <dimen name="hotel_review_summary_text_size">12dp</dimen>
-    <!--Review summary rating padding size-->
-    <dimen name="hotel_review_summary_padding_size">4dp</dimen>
+    <dimen name="hotel_reviews_summary_text_size">12dp</dimen>
+    <!--Review summary rating bottom padding size-->
+    <dimen name="hotel_reviews_summary_padding_bottom">10dp</dimen>
+    <!--Review summary overall rating left padding-->
+    <dimen name="hotel_reviews_rating_padding_left">4dp</dimen>
+    <!--Review summary overall rating right padding-->
+    <dimen name="hotel_reviews_rating_padding_right">@dimen/hotel_reviews_rating_padding_left</dimen>
+    <!--Review summary overall rating bottom padding-->
+    <dimen name="hotel_reviews_rating_padding_bottom">1dp</dimen>
 
     <!-- Approx height of car & lx suggestion's row -->
     <dimen name="suggestion_list_height">60dp</dimen>
