--- a/project/src/main/res/layout/widget_filter_button_with_count.xml
+++ b/project/src/main/res/layout/widget_filter_button_with_count.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:textAllCaps="false"
+            android:text="@string/lx_sort_filter"
             android:textColor="@color/text_black"
             android:textSize="16sp" />
     </LinearLayout>
