--- a/project/src/main/res/values/styles_hotels.xml
+++ b/project/src/main/res/values/styles_hotels.xml
@@ -31,6 +31,7 @@
         <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/expedia</item>
         <item name="skin_cvvDivDrawable">@drawable/div_cvv</item>
         <item name="skin_hotelFilterBackground">@color/hotel_filter_background_color</item>
+        <item name="skin_filterNumberBgDrawable">@drawable/filter_number_bg_hotels</item>
     </style>
 
     <!--
