--- a/project/src/main/res/layout/resort_fee_widget.xml
+++ b/project/src/main/res/layout/resort_fee_widget.xml
@@ -3,50 +3,62 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/spinner_ripple"
-    android:orientation="horizontal"
-    android:paddingBottom="12dp"
-    android:paddingLeft="18dp"
-    android:paddingRight="18dp"
-    android:paddingTop="12dp">
+    android:orientation="vertical">
+
+    <View
+        android:id="@+id/preview_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@drawable/map_shadow" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@drawable/spinner_ripple"
+        android:orientation="horizontal"
+        android:paddingBottom="12dp"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp"
+        android:paddingTop="12dp">
 
-        <com.expedia.bookings.widget.TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hotel_fees_for_this_stay"
+            android:orientation="vertical">
+
+            <com.expedia.bookings.widget.TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hotel_fees_for_this_stay"
+                android:textColor="@color/hotelsv2_checkout_text_color"
+                android:textSize="13sp"
+                app:textStyle="medium" />
+
+            <com.expedia.bookings.widget.TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/not_included_in_the_price"
+                android:textColor="@color/hotelsv2_checkout_text_color"
+                android:textSize="11sp"
+                app:textStyle="normal" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="13dp"
+            android:src="@drawable/details_info" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/resort_fees_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="right"
             android:textColor="@color/hotelsv2_checkout_text_color"
             android:textSize="13sp"
             app:textStyle="medium" />
 
-        <com.expedia.bookings.widget.TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/not_included_in_the_price"
-            android:textColor="@color/hotelsv2_checkout_text_color"
-            android:textSize="11sp"
-            app:textStyle="normal" />
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="13dp"
-        android:src="@drawable/details_info" />
-
-    <com.expedia.bookings.widget.TextView
-        android:id="@+id/resort_fees_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:gravity="right"
-        android:textColor="@color/hotelsv2_checkout_text_color"
-        android:textSize="13sp"
-        app:textStyle="medium" />
-
 </LinearLayout>
