--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -38,18 +38,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#00877B"
-                    android:paddingTop="10dp"
                     android:paddingBottom="10dp"
+                    android:paddingLeft="18dp"
                     android:paddingRight="18dp"
-                    android:paddingLeft="18dp">
+                    android:paddingTop="10dp">
 
                     <com.expedia.bookings.widget.TextView
                         android:id="@+id/discount_percentage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
                         android:background="@drawable/guest_rating_background"
                         android:gravity="center"
-                        android:layout_marginRight="10dp"
                         android:paddingBottom="3dp"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
@@ -72,12 +72,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical|right"
+                        android:text="@string/vip"
                         android:textColor="#FFFFFF"
                         android:textSize="11sp"
-                        android:text="@string/vip"
                         app:textStyle="medium" />
 
                 </LinearLayout>
+
                 <RelativeLayout
                     android:id="@+id/price_widget"
                     android:layout_width="match_parent"
@@ -215,10 +216,32 @@
                     android:id="@+id/etp_and_free_cancellation_messaging_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/etp_and_free_cancellation_divider"
+                    android:layout_below="@id/rating_divider"
                     android:orientation="horizontal"
                     android:visibility="gone"
                     android:weightSum="2">
+
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/free_cancellation"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:drawableLeft="@drawable/check"
+                        android:drawablePadding="8dp"
+                        android:paddingBottom="15dp"
+                        android:paddingLeft="18dp"
+                        android:paddingRight="18dp"
+                        android:paddingTop="15dp"
+                        android:text="@string/free_cancellation"
+                        android:textSize="13sp" />
+
+                    <View
+                        android:id="@+id/horizontal_divider_bw_etp_and_free_cancellation"
+                        android:layout_width="1px"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:background="@color/hotel_detail_divider" />
 
 
                     <com.expedia.bookings.widget.TextView
@@ -238,27 +261,6 @@
                         android:text="@string/pay_later_info_text"
                         android:textSize="13sp" />
 
-                    <View
-                        android:id="@+id/horizontal_divider_bw_etp_and_free_cancellation"
-                        android:layout_width="1px"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:background="@color/hotel_detail_divider" />
-
-                    <com.expedia.bookings.widget.TextView
-                        android:id="@+id/free_cancellation"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawableLeft="@drawable/check"
-                        android:drawablePadding="8dp"
-                        android:paddingBottom="15dp"
-                        android:paddingLeft="18dp"
-                        android:paddingRight="18dp"
-                        android:paddingTop="15dp"
-                        android:text="@string/free_cancellation"
-                        android:textSize="13sp" />
 
                 </LinearLayout>
 
@@ -274,9 +276,9 @@
                     android:id="@+id/hotel_description_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/etp_and_free_cancellation_messaging_info_divider"
+                    android:layout_below="@id/etp_and_free_cancellation_divider"
                     android:background="@drawable/hotel_detail_ripple"
-                    android:paddingBottom="5dp"
+                    android:paddingBottom="8dp"
                     android:paddingLeft="18dp"
                     android:paddingRight="18dp"
                     android:paddingTop="15dp">
@@ -285,6 +287,7 @@
                         android:id="@+id/body_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLines="2"
                         android:textColor="@color/hotelsv2_checkout_text_color"
                         android:textSize="13sp" />
 
@@ -296,6 +299,7 @@
                         android:layout_below="@+id/body_text"
                         android:background="@android:color/transparent"
                         android:clickable="false"
+                        android:paddingTop="5dp"
                         android:src="@drawable/read_more" />
 
                 </RelativeLayout>
@@ -304,10 +308,10 @@
                     android:id="@+id/amenities_scroll_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/rating_divider"
-                    android:scrollbarSize="3dp"
+                    android:layout_below="@+id/etp_and_free_cancellation_messaging_info_divider"
                     android:background="#EEEEEE"
-                    android:fillViewport="true">
+                    android:fillViewport="true"
+                    android:scrollbarSize="3dp">
 
                     <TableLayout
                         android:layout_width="match_parent"
@@ -520,21 +524,36 @@
         android:gravity="bottom"
         android:visibility="gone" />
 
-    <Button
-        android:id="@+id/sticky_select_room"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:background="@drawable/hotel_select_room_ripple"
-        android:gravity="center"
-        android:paddingBottom="20dp"
-        android:paddingTop="19dp"
-        android:text="@string/select_a_room_instruction"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:visibility="gone" />
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/sticky_select_room_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_above="@+id/sticky_select_room"
+            android:background="@drawable/map_shadow"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/sticky_select_room"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/hotel_select_room_ripple"
+            android:gravity="center"
+            android:paddingBottom="20dp"
+            android:paddingTop="19dp"
+            android:text="@string/select_a_room_instruction"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
     <View
         android:id="@+id/hotel_details_gradient"
