s/4965 detail sticky header - price container never overlap with toolbar text. - added fallback image for room.

--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -24,8 +24,7 @@
             android:layout_height="120dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:scaleType="fitXY"
-            android:src="@drawable/cars_fallback" />
+            android:scaleType="centerCrop" />
 
         <RelativeLayout
             android:id="@+id/collapsed_container"
