--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -217,6 +217,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/rating_divider"
+                    android:background="#EEEEEE"
                     android:orientation="horizontal"
                     android:visibility="gone"
                     android:weightSum="2">
