--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -461,14 +461,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/map_click_container"
-                    android:background="#EEEEEE"
-                    android:padding="12dp">
+                    android:background="#EEEEEE" >
 
                     <com.expedia.bookings.widget.SlidingRadioGroup
                         android:id="@+id/radius_pay_options"
                         style="@style/Widget.SlidingRadioGroup.HotelFilterControls"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
+                        android:layout_margin="12dp"
                         android:checkedButton="@+id/radius_pay_now">
 
                         <RadioButton
@@ -487,6 +487,13 @@
                             android:text="@string/room_rate_pay_later" />
 
                     </com.expedia.bookings.widget.SlidingRadioGroup>
+
+                    <View
+                        android:id="@+id/pay_later_drop_shadow"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/toolbar_dropshadow_height"
+                        android:layout_below="@id/radius_pay_options"
+                        android:background="@drawable/tb_shadow" />
 
                 </com.expedia.bookings.widget.HotelEtpStickyHeaderLayout>
 
