--- a/project/src/main/res/layout/widget_hotel_reviews.xml
+++ b/project/src/main/res/layout/widget_hotel_reviews.xml
@@ -23,15 +23,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <com.expedia.bookings.presenter.hotel.HotelReviewsToolbar
-                android:id="@+id/hotel_reviews_toolbar"
-                style="@style/LaunchActionBar"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/hotel_cell_primary_color"
-                app:contentInsetLeft="0dp"
-                app:contentInsetStart="0dp" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <com.expedia.bookings.presenter.hotel.HotelReviewsToolbar
+                    android:id="@+id/hotel_reviews_toolbar"
+                    style="@style/LaunchActionBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@color/hotel_cell_primary_color"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetStart="0dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/toolbar_dropshadow_height"
+                    android:background="@drawable/tb_shadow" />
+            </LinearLayout>
         </FrameLayout>
     </LinearLayout>
 
