--- a/project/src/main/res/layout/section_phone_launch_double_row_five_lob.xml
+++ b/project/src/main/res/layout/section_phone_launch_double_row_five_lob.xml
@@ -29,6 +29,7 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:showDividers="middle">
+
             <com.expedia.bookings.widget.PhoneLaunchDoubleRowButton
                 android:id="@+id/hotels_button"
                 android:layout_width="0dp"
@@ -39,6 +40,7 @@
                 app:btn_bg="@color/hotel_lob_btn"
                 app:btn_icon="@drawable/ic_launch_hotels"
                 app:btn_text="@string/nav_hotels"
+                app:five_lob_btn="true"
                 app:icon_min_scale=".70" />
 
             <com.expedia.bookings.widget.PhoneLaunchDoubleRowButton
@@ -50,6 +52,7 @@
                 app:btn_bg="@color/flights_lob_btn"
                 app:btn_icon="@drawable/ic_launch_flights"
                 app:btn_text="@string/nav_flights"
+                app:five_lob_btn="true"
                 app:icon_min_scale=".68" />
 
         </LinearLayout>
@@ -69,7 +72,7 @@
         <View
             android:id="@+id/lob_bottom_row_bg"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/launch_lob_double_row_height"
+            android:layout_height="@dimen/launch_five_lob_double_row_height"
             android:background="@color/launch_lob_bg" />
 
         <LinearLayout
@@ -87,13 +90,14 @@
                 android:layout_marginLeft="@dimen/launch_tile_margin_side"
                 android:layout_marginRight="@dimen/launch_tile_margin_middle"
                 android:layout_weight="1"
+                app:bg_card_height="@dimen/launch_five_lob_double_row_height"
+                app:bg_icon_padding_top="@dimen/launch_five_lob_button_top_padding"
                 app:btn_bg="@color/cars_lob_btn"
                 app:btn_icon="@drawable/ic_launch_cars_five_lob"
-                app:icon_min_scale=".70"
                 app:btn_text="@string/nav_cars"
                 app:btn_text_size="@dimen/launch_five_lob_button_text_size"
-                app:bg_card_height="@dimen/launch_lob_double_row_height"
-                app:bg_icon_padding_top="@dimen/launch_five_lob_button_top_padding"
+                app:five_lob_btn="true"
+                app:icon_min_scale=".70"
                 app:refernce_container_height="@dimen/launch_lob_reference_container_height" />
 
             <com.expedia.bookings.widget.PhoneLaunchButton
@@ -102,13 +106,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/launch_tile_margin_middle"
                 android:layout_weight="1"
+                app:bg_card_height="@dimen/launch_five_lob_double_row_height"
+                app:bg_icon_padding_top="@dimen/launch_five_lob_button_top_padding"
                 app:btn_bg="@color/lx_lob_btn"
                 app:btn_icon="@drawable/ic_launch_activities_five_lob"
-                app:icon_min_scale=".70"
                 app:btn_text="@string/nav_lx"
                 app:btn_text_size="@dimen/launch_five_lob_button_text_size"
-                app:bg_card_height="@dimen/launch_lob_double_row_height"
-                app:bg_icon_padding_top="@dimen/launch_five_lob_button_top_padding"
+                app:five_lob_btn="true"
+                app:icon_min_scale=".70"
                 app:refernce_container_height="@dimen/launch_lob_reference_container_height" />
 
             <com.expedia.bookings.widget.PhoneLaunchButton
@@ -117,13 +122,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/launch_tile_margin_side"
                 android:layout_weight="1"
+                app:bg_card_height="@dimen/launch_five_lob_double_row_height"
+                app:bg_icon_padding_top="@dimen/launch_five_lob_button_top_padding"
                 app:btn_bg="@color/transport_lob_btn"
                 app:btn_icon="@drawable/ic_launch_ground_transportation_five_lob"
-                app:icon_min_scale=".70"
                 app:btn_text="@string/nav_transport"
                 app:btn_text_size="@dimen/launch_five_lob_button_text_size"
-                app:bg_card_height="@dimen/launch_lob_double_row_height"
-                app:bg_icon_padding_top="@dimen/launch_five_lob_button_top_padding"
+                app:five_lob_btn="true"
+                app:icon_min_scale=".70"
                 app:refernce_container_height="@dimen/launch_lob_reference_container_height" />
 
         </LinearLayout>
