--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="launch_header_height">48dp</dimen>
     <dimen name="launch_header_top_space">183dp</dimen>
     <dimen name="launch_header_double_row_top_space">240dp</dimen>
+    <dimen name="launch_header_five_lob_top_space">246dp</dimen>
     <dimen name="launch_tile_hotel_sale_horizontal_padding">6dp</dimen>
     <dimen name="launch_tile_hotel_sale_vertical_padding">4dp</dimen>
     <dimen name="launch_tile_hotel_sale_drawable_padding">5dp</dimen>
@@ -33,7 +34,9 @@
     <dimen name="launch_lob_reference_container_height">130dp</dimen>
     <dimen name="launch_lob_squashed_height">80dp</dimen>
     <dimen name="launch_lob_double_row_height">81dp</dimen>
+    <dimen name="launch_five_lob_double_row_height">87dp</dimen>
     <dimen name="launch_lob_double_row_container_height">197dp</dimen>
+    <dimen name="launch_five_lob_double_row_container_height">203dp</dimen>
     <dimen name="launch_lob_double_row_squashed_height">112dp</dimen>
     <dimen name="launch_lob_btn_corner_radius">3dp</dimen>
     <dimen name="launch_tile_margin_top">8dp</dimen>
